--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Backend assignment for ReachInbox email sync system",
   "main": "dist/index.js",
-  "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc"
-  },
+ "scripts": {
+  "start": "node dist/index.js",
+  "dev": "nodemon --exec ts-node src/index.ts",
+  "build": "tsc"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
