--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Backend assignment for ReachInbox email sync system",
   "main": "dist/index.js",
  "scripts": {
-  "start": "node dist/index.js",
+  "start": "ts-node src/index.js",
   "dev": "nodemon --exec ts-node src/index.ts",
-  "build": "tsc"
 },
   "keywords": [],
   "author": "",
