--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Backend assignment for ReachInbox email sync system",
   "main": "dist/index.js",
- "scripts": {
-  "start": "ts-node src/index.js",
-  "dev": "nodemon --exec ts-node src/index.ts",
+"scripts": {
+  "start": "ts-node src/index.ts",
+  "dev": "nodemon --exec ts-node src/index.ts"
 },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
