--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Backend assignment for ReachInbox email sync system",
   "main": "dist/index.js",
+
 "scripts": {
-  "start": "ts-node src/index.ts",
+  "build": "tsc",
+  "start": "node dist/index.js",
   "dev": "nodemon --exec ts-node src/index.ts"
 },
 
