--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 
 "scripts": {
   "build": "tsc",
-  "start": "node dist/index.js",
+  "start": "npm run build && node dist/index.js",
   "dev": "nodemon --exec ts-node src/index.ts"
 },
 
