--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
 
 "scripts": {
-  "build": "tsc",
+  "prestart": "npm install typescript -g || true",
+  "build": "npx tsc",
   "start": "npm run build && node dist/index.js",
   "dev": "nodemon --exec ts-node src/index.ts"
 },
